...
      _currencyCode ?? defaultCurrency.code,
    );

    final bool controllerLoading = controllerState.isLoading;

    return Scaffold(
      appBar: AppBar(title: const Text('Create group')),
      body: SafeArea(
        child: Form(
          key: _formKey,
          child: ListView(
            padding: const EdgeInsets.all(20),
            children: [
...
